work css correction

--- a/index.html
+++ b/index.html
@@ -68,6 +68,33 @@
   </div>
 </section>
 
+<section>
+  <div class="content">
+    <h3>Passions</h3>
+    <p>Saut en parachute</p>
+    <p>Bali</p>
+  </div>
+</section>
+<footer class="secondary-block">
+  <div class="content">
+    <div class="links">
+      <ul>
+        <li><a href="http://konexio.eu">Voyage</a></li>
+        <li><a href="http://konexio.eu">Tech</a></li>
+      </ul>
+    </div>
+    <div class="links">
+      <ul>
+        <li><a href="http://konexio.eu">LinkedIn</a></li>
+        <li><a href="http://konexio.eu">Twitter</a></li>
+      </ul>
+    </div>
+  </div>
+</footer>
+
+
+
+
 
 
 
